2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove creating $(ARCH) in compilation rules.

2002-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require autoconf >= 2.57 and automake-1.7.2.

2002-12-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/prog-cxx.m4: Swap RTEMS_CHECK_TOOL/AC_PROG_CXX.

2002-12-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Require autoconf 2.54 or 2.57.
	Require automake-1.7.2.

2002-12-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/bsp-configure.m4: Remove RTEMS_CHECK_BSP_CACHE.
	* aclocal/env-rtemsbsp.m4: Add comments to AC_ARG_VARs.
	Add AC_ARG_VAR(RTEMS_CPU_MODEL).

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Rework *FLAGS, AM_*FLAGS handling.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove hard-coded *_PROFILE_V.
	Add autoconf-supplied CPU_CFLAGS, CFLAGS_OPTIMIZE_V, CFLAGS_DEBUG_V, 
	CFLAGS_PROFILE_V.
	Remove CPPFLAGS_GCC.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/env-rtemsbsp.m4: Add AC_ARG_VAR for CPU_CFLAGS,
	CFLAGS_OPTIMIZE_V, CFLAGS_DEBUG_V, CFLAGS_PROFILE_V, RTEMS_BSP_FAMILY.
	* aclocal/prog-cc.m4: Reworked CFLAGS handling.
	* aclocal/prog-cxx.m4: Reworked CXXFLAGS handling.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/rtems-flags.m4: New.

2002-12-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* bootstrap: Allow autoconf-2.57.

2002-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* aclocal/prog-cc.m4: Remove GCCSED.

2002-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* automake/compile.am: Remove LDFLAGS_INCOMPLETE.
	Remove LDFLAGS.
	Add CCAS, CCASCOMPILE.
	Remove compilation rules for *.cpp, *.cxx, *.C.
	Use CCASCOMPILE to compile *.S.
	Add -pg to RTEMS_CFLAGS_PROFILE_V.

2002-11-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove c/make.

2002-11-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
